--- a/AI-Image-generator/styles.css
+++ b/AI-Image-generator/styles.css
@@ -55,4 +55,13 @@
     background: #fff;
     border-radius: 30px;
 }
+.image-generator .prompt-input{
+    width: 100%;
+    height: 100%;
+    font-size: 1rem;
+    outline: none;
+    border: none;
+    background: none;
+    padding: 0 17px;
+}
 
