--- a/AI-Image-generator/styles.css
+++ b/AI-Image-generator/styles.css
@@ -11,7 +11,8 @@
     height: 40vh;
     display: flex;
     position: relative;
-    background: rgba(35, 44, 57, 0.5);
+    background: rgba(35, 44, 57, 0.2);
+    background-image: url(images/th\ \(5\).jpeg);
     background-size: cover;
     align-items: center;
     justify-content: center;
@@ -64,4 +65,120 @@
     background: none;
     padding: 0 17px;
 }
+.image-generator .controls{
+  display: flex;
+  height: 100%;
+  gap: 15px;  
+}
+.generate-form .img-quantity{
+    outline: none;
+    border: none;
+    background: none;
+    font-size: 1rem;
+}
+.generate-form .generate-btn{
+font-size: 1rem;
+outline: none;
+background: none;
+border: none;
+color: #fff;
+font-weight: 500;
+padding: 0 25px;
+cursor: pointer;
+border-radius: 30px;
+background: #4949e7;
+}
+.image-gallery{
+    display: flex;
+    gap: 15px;
+    padding: 0 15px;
+    max-width: 1250px;
+    margin: 50px auto;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.img-card {
+    position: relative;
+   width: 285px;
+    height: 11rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    aspect-ratio: 1/1;
+    border-radius: 5px;
+    overflow: hidden;
+    background: #f2f2f2;
+}
 
+.image-gallery .img-card img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.image-gallery .img-card.loading img{
+    width: 80px;
+    height: 80px;
+}
+.image-gallery .img-card .download-btn{
+    position: absolute;
+    bottom: 15px;
+    right: 15px;
+    background: #fff;
+    height: 36px;
+    width: 36px;
+    border-radius: 50%;
+    display: none;
+    
+    align-items: center;
+    justify-content: center;
+}
+.image-gallery .img-card:not(.loading):hover .download-btn{
+    display: flex;
+}
+
+.image-gallery .img-card .download-btn img{
+    width: 14px;
+    height: 14px;
+}
+@media screen and (max-width: 760px){
+    .image-generator h1{
+        font-size: 1.8rem;
+    }
+    .image-generator p{
+        font-size: 1rem;
+    }
+    .image-generator .generate-form{
+        margin-top: 30px;
+        height: 52px;
+        display: block;
+    }
+    .generate-form .controls{
+        height: 40px;
+        margin-top: 15px;
+        align-items: center;
+        justify-content: flex-end;
+    }
+    .generate-form .img-quantity{
+     color: #fff;
+    }
+        .generate-form .img-quantity option{
+            color: #000;
+        }
+    
+    .generate-form .generate-btn{
+        height: 100%;
+    }
+    .image-gallery{
+        margin-top: 20px;
+    }
+    .image-gallery .img-card:not(.loading) .download-btn{
+        display: flex;
+    }
+
+}
+
+@media screen and (max-width: 550px){
+  .image-gallery .img-card{
+    width: 100%;
+  }
+}
