--- a/AI-Image-generator/styles.css
+++ b/AI-Image-generator/styles.css
@@ -113,7 +113,7 @@ background: #4949e7;
 .image-gallery .img-card img{
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: fill;
 }
 .image-gallery .img-card.loading img{
     width: 80px;
